--- a/Angular/index.html
+++ b/Angular/index.html
@@ -5,6 +5,9 @@
     <title></title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
+    <script src="app/DecisionForm/dfController.js"></script>
+    <script src="app/DecisionForm/dfDirective.js"></script>
+    <script src="app/DecisionForm/dfService.js"></script>
 </head>
 <body>
 
