--- a/Angular/app/DecisionForm/dfTemplate.html
+++ b/Angular/app/DecisionForm/dfTemplate.html
@@ -1,10 +1,9 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
-</head>
-<body>
+﻿<form role="form">
+    <div class="form-group">
+        <label for="sessionName">Name</label>
+        <input type="text" id="sessionName" name="sessionName" class="form-control"/>
+    </div>
+    
+    <input type="submit" class="btn btn-primary" value="Submit"/>
 
-</body>
-</html>
+</form>
