--- a/Angular/index.html
+++ b/Angular/index.html
@@ -1,15 +1,18 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html ng-app="angularFormsApp">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
+    <script src="app/AngularFormApp.js"></script>
     <script src="app/DecisionForm/dfController.js"></script>
     <script src="app/DecisionForm/dfDirective.js"></script>
     <script src="app/DecisionForm/dfService.js"></script>
 </head>
-<body>
+    <body ng-controller="dfController" class="container">
+        <br/>
 
-</body>
+        <decision-form/>
+    </body>
 </html>
