--- a/Angular/index.html
+++ b/Angular/index.html
@@ -5,14 +5,18 @@
     <title></title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/angular-route.min.js"></script>
+
     <script src="app/AngularFormApp.js"></script>
+    <script src="app/DataService.js"></script>
+
     <script src="app/DecisionForm/dfController.js"></script>
     <script src="app/DecisionForm/dfDirective.js"></script>
-    <script src="app/DecisionForm/dfService.js"></script>
-</head>
-    <body ng-controller="dfController" class="container">
-        <br/>
 
-        <decision-form/>
+</head>
+    <body class="container">
+        <h1>Start Page</h1>
+        <div ng-view>
+        </div>
     </body>
 </html>
