--- a/Angular/index.html
+++ b/Angular/index.html
@@ -10,6 +10,8 @@
     <script src="app/AngularFormApp.js"></script>
     <script src="app/DataService.js"></script>
 
+    <script src="app/homeController.js"></script>
+
     <script src="app/DecisionForm/dfController.js"></script>
     <script src="app/DecisionForm/dfDirective.js"></script>
 
