Added Criteria insert

--- a/Angular/app/Home.html
+++ b/Angular/app/Home.html
@@ -3,6 +3,8 @@
            ng-click="showCreateDecisionForm()" />
     <input type="button" class="btn btn-primary" value="Update decision"
            ng-click="showUpdateDecisionForm(0)" />
+    <input type="button" class="btn btn-primary" value="Add Criteria"
+           ng-click="showAddCriteriaForm()" />
 </div>
 <div ng-model="decision.sessionName" class="col-sm-offset-3 col-sm-9">
     <h4>Session Name: {{decision.sessionName}}</h4>
