Added id field to criteria

--- a/Angular/app/Home.html
+++ b/Angular/app/Home.html
@@ -17,7 +17,7 @@
     <h5>Criterias:</h5>
     <ol>
         <li ng-repeat="criteria in decisionItem.criteriaArray">
-            Name:{{criteria.name}}; Rate:{{criteria.rate}}
+            Name [{{criteria.id}}]:{{criteria.name}}; Rate:{{criteria.rate}}
             <br/>
             Value:{{criteria.value}}; Rate:{{criteria.valueRate}}
         </li>
