Added update value functionality (doesn't work dynamically)

--- a/Angular/app/Home.html
+++ b/Angular/app/Home.html
@@ -20,6 +20,8 @@
             Name [{{criteria.id}}]:{{criteria.name}}; Rate:{{criteria.rate}}
             <br/>
             Value:{{criteria.value}}; Rate:{{criteria.valueRate}}
+            <input type="button" class="btn btn-primary" value="Update criteia"
+                   ng-click="showCriteriaToUpdateValueRate({{decisionItem.id}},{{criteria.id}})" />
         </li>
     </ol>
 </div>
