--- a/Angular/index.html
+++ b/Angular/index.html
@@ -2,7 +2,7 @@
 <html ng-app="angularFormsApp">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
+    <title>Decision</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.min.js"></script>
