--- a/WebApp/app/Home.html
+++ b/WebApp/app/Home.html
@@ -20,8 +20,9 @@
 </div>
 
 <div ng-repeat="decisionItem in decision.decisionArray" class="col-sm-3 list-group">
-    
+
     <div class="list-group-item">
+        <span class="badge" title="Rate">{{decisionItem.finalRate}}</span>
         <h4>{{decisionItem.name}}:</h4>
         <ul ng-repeat="criterion in decisionItem.criteriaArray" class="list-group">
             <li class="list-group-item">
@@ -41,20 +42,3 @@
         </ul>
     </div>
 </div>
-
-<!--<div ng-repeat="decisionItem in decision.decisionArray" class="col-sm-3 list-group">
-    <div class="list-group-item">
-        <h4>{{decisionItem.name}}</h4>
-        <h5 class="list-group-item-heading">Criteria:</h5>
-        <ol>
-            <li ng-repeat="criterion in decisionItem.criteriaArray">
-                <h5>{{criterion.name}}:<span class="badge" title="Rate">{{criterion.rate}}</span></h5>
-                {{criterion.value}} <span class="badge" title="Rate">{{criterion.valueRate}}</span>
-                <div>
-                    <input type="button" class="btn btn-warning" value="Update criterion"
-                           ng-click="showCriteriaToUpdateValueRate(decisionItem.id,criterion.id)" />
-                </div>
-            </li>
-        </ol>
-    </div>
-</div>-->
